# kte

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  NOTICE  README.md  config.yaml  kte.sh  pyproject.toml
.github/DISCUSSION_TEMPLATE/: adopters.yaml  bugs.yaml
ai/: config.py  main.py
ai/llms/: open_ai_utils.py
ai/rag/: load.py  retrieve.py  store.py  template.json
ai/rag/loaders/tools/: checkov.py  kor.py  kube_score.py  kubesec.py  polaris.py  trivy.py
ai/rag/loaders/utils/: html.py  loader.py  prometheus.py  web.py
dashboards/: index.html
deployment/addons/prometheus/: values.yaml
deployment/addons/prometheus/aks/: main.tf  outputs.tf
deployment/addons/prometheus/eks/: main.tf
deployment/addons/ssh/: README.md
deployment/clusters/aks/: main.tf  outputs.tf  variables.tf
deployment/clusters/eks/: main.tf  outputs.tf
deployment/clusters/gke/: main.tf  outputs.tf
docs/: configuration.md  default-helm.md  usage.md
scripts/: apply.sh  destroy.sh  state.sh  tunnel.sh
tools/checkov/: template.html
tools/checkov/aks/: main.tf  variables.tf
tools/checkov/eks/: main.tf
tools/checkov/gke/: main.tf  variables.tf
tools/kor/aks/: main.tf
tools/kor/eks/: main.tf
tools/kor/gke/: main.tf
tools/kube-score/: template.html
tools/kubesec/: template.html
tools/polaris/aks/: main.tf
tools/polaris/eks/: main.tf
tools/polaris/gke/: main.tf  outputs.tf
tools/trivy-operator/: values.yaml
tools/trivy-operator/aks/: main.tf
tools/trivy-operator/eks/: main.tf  variables.tf
tools/trivy-operator/gke/: main.tf
(+30 files in other folders)
